<resources>
    <string name="app_name">Ingenieria 2019</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_histogram">Histogram</string>
    <string name="menu_pie_chart">Pie Chart</string>
    <string name="menu_geo_charts">GeoCharts</string>
    <string name="menu_heatmap">Heatmap</string>
    <string name="menu_region_geo_charts">Region GeoCharts</string>
    <string name="menu_region_heatmap">HeatMap</string>
    <string name="menu_height_map">Height Map</string>
    <string name="menu_timechart">Time Chart</string>
    <string name="title_geo_charts">Geo Charts</string>
    <string name="title_height_map">Height Map</string>
    <string name="title_pie_chart">Pie Chart</string>
    <string name="title_histogram">Histogram</string>
    <string name="title_heatmap">HeatMap</string>
    <string name="title_timechart">Time Chart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_fragment">Fragment 1</string>
    <string name="second_fragment">Fragment 2</string>
    <string name="static_fragment">Static fragment</string>
    <string name="to_second_fragment">Change to second fragment</string>
    <string name="to_static_fragment">Change to static fragment</string>


    <string name="country_prompt">Choose a country</string>

    <string-array name="continents_array">
        <item>002 - Africa</item>
        <item>150 - Europe</item>
        <item>019 - Americas</item>
        <item>142 - Asia</item>
        <item>009 - Oceania</item>
    </string-array>

    <string-array name="sub_continents_array">
        <item>015 - Northern Africa</item>
        <item>011 - Western Africa</item>
        <item>017 - Middle Africa</item>
        <item>014 - Eastern Africa</item>
        <item>018 - Southern Africa</item>
    </string-array>

    <string name="button_radius">Radius</string>
    <string name="button_gradient">Gradient</string>
    <string name="button_opacity">Opacity</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD4kyr1zB6g2bqB_N99QpofixA4xPovy7U</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaWFyYWFsZmFyb2x1dHoiLCJhIjoiY2p4Z29pcXkzMDJtNjNvcnhkeGVjNTNseSJ9.jSgYo-ffMz7mrZbocrnQhg</string>
    <string name="san_francisco">San Francisco</string>
    <string name="los_angeles">Los Angeles</string>
    <string name="seattle">Seattle</string>
    <string name="new_orleans">Nova Orleans</string>
    <string name="chicago">Xicago</string>
    <string name="philadelphia">Filadèlfia</string>
    <string name="new_york">Nova York</string>
    <string name="atlanta">Atlanta</string>
    <string name="portland">Portland</string>
    <string name="denver">Denver</string>
    <string name="minneapolis">Minneapolis</string>
    <string name="miami">Miami</string>

</resources>
