<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_pie_chart"
        android:icon="@drawable/ic_pie_chart"
        android:title="@string/menu_pie_chart" />
    <item
        android:id="@+id/nav_histogram"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/menu_histogram" />
    <item
        android:id="@+id/nav_region_geo_charts"
        android:icon="@drawable/ic_world_map"
        android:title="@string/menu_region_geo_charts" />
    <item
        android:id="@+id/nav_region_heatmap"
        android:icon="@drawable/ic_firefighter"
        android:title="@string/menu_region_heatmap" />
    <item
        android:id="@+id/nav_timechart"
        android:icon="@drawable/ic_time_analytics"
        android:title="@string/menu_timechart" />

    <item
        android:id="@+id/nav_height_map"
        android:icon="@drawable/ic_analytics"
        android:title="@string/menu_height_map"/>

</menu>
